admin panel checkup
